--- a/.devcontainer/node-container/devcontainer.json
+++ b/.devcontainer/node-container/devcontainer.json
@@ -10,7 +10,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"dbaeumer.vscode-eslint"
+				"dbaeumer.vscode-eslint",
+				"Vue.volar"
 			]
 		}
 	}
