--- a/kleingeldkreislauf/package.json
+++ b/kleingeldkreislauf/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^0.7.2",
     "eslint": "^9.15.0",
     "nuxt": "^3.14.1592",
+    "nuxt-lucide-icons": "^1.0.5",
     "vue": "latest",
     "vue-router": "latest"
   },
